End of the War of the Floor
THE GULV HAS PERISHED! WE ARE VICTORIOUS!

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
+GameDefaultMap=/Game/MainLevel.MainLevel
 GlobalDefaultGameMode=/Game/Blueprints/BP_AlgoritmerOblig3GameModeBase.BP_AlgoritmerOblig3GameModeBase_C
+EditorStartupMap=/Game/MainLevel.MainLevel
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
